# src/swagger-output.json
@@ -10,7 +10,15 @@
     "tags": [
         {
             "name": "User",
-            "description": "Endpoints"
+            "description": "Endpoints user"
+        },
+        {
+            "name": "Admin",
+            "description": "Endpoints admin"
+        },
+        {
+            "name": "Document",
+            "description": "Endpoints document"
         }
     ],
     "schemes": [
@@ -38,6 +46,9 @@
     "paths": {
         "/api/admin/login": {
             "post": {
+                "tags": [
+                    "Admin"
+                ],
                 "description": "Login for admin",
                 "produces": [
                     "application/json"
@@ -69,7 +80,7 @@
         "/api/admin/documents/{id}/users": {
             "get": {
                 "tags": [
-                    "User"
+                    "Admin"
                 ],
                 "description": "Get list users for assign document",
                 "produces": [
@@ -94,7 +105,10 @@
             }
         },
         "/api/admin/documents/{id}/assign": {
-            "get": {
+            "post": {
+                "tags": [
+                    "Admin"
+                ],
                 "description": "Assign document to specific users.",
                 "produces": [
                     "application/json"
@@ -110,7 +124,13 @@
                         "name": "userIds",
                         "in": "body",
                         "required": true,
-                        "type": "array"
+                        "type": "array",
+                        "example": {
+                            "userIds": [
+                                { "userId": "id1" },
+                                { "userId": "id2" }
+                            ]
+                        }
                     }
                 ],
                 "responses": {
@@ -129,25 +149,11 @@
                 }
             }
         },
-        "/api/auth/google": {
-            "get": {
-                "description": "Login by terralogic account",
-                "produces": [
-                    "application/xml"
-                ],
-                "parameters": [],
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    },
-                    "403": {
-                        "description": "Not terralogic account"
-                    }
-                }
-            }
-        },
         "/api/document": {
             "get": {
+                "tags": [
+                    "Document"
+                ],
                 "description": "Get all list documents.",
                 "consumes": [
                     "application/json"
@@ -176,6 +182,9 @@
                 }
             },
             "post": {
+                "tags": [
+                    "Document"
+                ],
                 "description": "Create/Upload document",
                 "produces": [
                     "application/json"
@@ -203,6 +212,9 @@
         },
         "/api/document/{id}": {
             "get": {
+                "tags": [
+                    "Document"
+                ],
                 "description": "Get document by id",
                 "produces": [
                     "application/json"
@@ -228,6 +240,9 @@
                 }
             },
             "put": {
+                "tags": [
+                    "Document"
+                ],
                 "description": "Update document by id",
                 "produces": [
                     "application/json"
@@ -256,6 +271,9 @@
                 }
             },
             "delete": {
+                "tags": [
+                    "Document"
+                ],
                 "description": "Delete document by id",
                 "produces": [
                     "application/json"
@@ -278,8 +296,38 @@
                 }
             }
         },
+        "api/userlogin": {
+            "post": {
+                "tags": [
+                    "User"
+                ],
+                "description": "Login for user",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "tokenId",
+                        "in": "body",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Login success"
+                    },
+                    "403": {
+                        "description": "Not terralogic account"
+                    }
+                }
+            }
+        },
         "api/user/document/{id}/confirm": {
             "get": {
+                "tags": [
+                    "User"
+                ],
                 "description": "Confirm document by id",
                 "produces": [
                     "application/json"
